--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -42,8 +42,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: django-github-actions-aws
-        environment_name: django-github-actions-aws
+        application_name: ${{ secrets.APPLICATION_NAME }}
+        environment_name: ${{ secrets.ENVIRONMENT_NAME }}
         version_label: 12348
-        region: "us-east-2"
+        region: ${{ secrets.REGION }}
         deployment_package: deploy.zip
