--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -45,5 +45,5 @@ jobs:
         application_name: ${{ secrets.APPLICATION_NAME }}
         environment_name: ${{ secrets.ENVIRONMENT_NAME }}
         version_label: 12348
-        region:  ${{ secrets.REGION }}
+        region:  us-east-1
         deployment_package: deploy.zip
