--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -27,23 +27,31 @@ jobs:
         python manage.py test
 
   deploy:
-    needs: [test]
+    needs: [ test ]
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
+      - name: Checkout source code
+        uses: actions/checkout@v2
 
-    - name: Generate deployment package
-      run: zip -r deploy.zip . -x '*.git*'
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
 
-    - name: Deploy to EB
-      uses: einaregilsson/beanstalk-deploy@v20
-      with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name:aws_webapp_test
-        environment_name:Awswebapptest-env
-        version_label: 12348
-        region:  us-east-1
-        deployment_package: deploy.zip
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+
+          // Remember the secrets we embedded? this is how we access them
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+          // Replace the values here with your names you submitted in one of
+          // The previous sections
+          application_name: aws_webapp_test
+          environment_name: Awswebapptest-env
+
+          // The version number could be anything. You can find a dynamic way
+          // Of doing this.
+          version_label: 12348
+          region: "us-east-1"
+          deployment_package: deploy.zip
