--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -47,6 +47,6 @@ jobs:
           application_name: aws_webapp_test
           environment_name: Awswebapptest-env
 
-          version_label: 12348
+          version_label: Sample Application
           region: "us-east-1"
           deployment_package: deploy.zip
