--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -48,5 +48,5 @@ jobs:
           environment_name: Awswebapptest-env
 
           version_label: Sample Application
-          region:  "us-east-1"
+          region:  us-east-1
           deployment_package:  deploy.zip
