--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -50,3 +50,4 @@ jobs:
           version_label: Sample Application
           region:  us-east-1
           deployment_package:  deploy.zip
+          use_existing_version_if_available: true
