--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -45,7 +45,7 @@ jobs:
           aws_secret_key: lRJyT6DiX48LTjEiy7BHRQ6srB8JpBzKf+6NgguZ
 
           application_name: aws_webapp_test-1
-          environment_name: Awswebapptest-env-1
+          environment_name: Awswebapptest1-env
 
           version_label: Sample Application
           region:  us-east-1
