--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -41,8 +41,8 @@ jobs:
         uses: einaregilsson/beanstalk-deploy@v20
         with:
 
-          aws_access_key: AKIA3PJY7HDDADRLYWWR
-          aws_secret_key: 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
+          aws_access_key:
+          aws_secret_key:
 
           application_name: aws_webapp_test-1
           environment_name: Awswebapptest1-env
